--- a/index.css
+++ b/index.css
@@ -1,53 +1,64 @@
-footer{
-    background-color: black;
-}
-.footercontainer{
-    width: 100%;
-    padding: 70px 30px 20px;
-}
-.footerNav{
-    margin: 30px 0;
-}
-.footerNav ul{
-display: flex;
-justify-content: center;
-list-style-type: none;
-}.footerNav ul li a{
-    color: aqua;
-    margin: 20px;
-    text-decoration: none;
-    font-size: 1.3em;
-    opacity: 0.7;
-    transition: 0.5s;
-}
-.footerNav ul li a:hover{
-    opacity: 1;
-}
-.footerbottom{
-    background-color: blue;
-    padding: 20px;
-    text-align: center;
-}
-.footerbottom p{
-    color: white;
-}
-.designer{
-    opacity: 0.7;
-    text-transform: uppercase;
-    letter-spacing: 1px;
-    font-weight: 400;
-    margin: 0px 5px;
-}@media(max-width: 700){
-    .footerNav ul{
-        flex-direction: column;
-    }
-    .footerNav ul li{
-        width: 100%;
-        text-align: center;
-        margin: 10px;
-        flex-direction: column;
-    }
-}
+
 h1{
     color:rgb(224, 64, 64);
 }
+
+body {
+	font-family: Arial, sans-serif;
+}
+
+header {
+	background-color: #333;
+	color: #fff;
+	padding: 1rem;
+	text-align: center;
+}
+
+nav ul {
+	list-style: none;
+	margin: 0;
+	padding: 0;
+	display: flex;
+	justify-content: space-between;
+}
+
+nav li {
+	margin-right: 20px;
+}
+
+nav a {
+	color: #fff;
+	text-decoration: none;
+}
+
+main {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	padding: 2rem;
+}
+
+h1 {
+	margin-bottom: 1rem;
+}
+
+img {
+	width: 100%;
+	height: auto;
+	margin-bottom: 1rem;
+}
+
+h2 {
+	margin-top: 2rem;
+}
+
+ul {
+	list-style: none;
+	margin: 0;
+	padding: 0;
+}
+
+li {
+	margin-bottom: 1rem;
+}
+
